--- a/.github/workflows/build-and-push-docker-hub.yml
+++ b/.github/workflows/build-and-push-docker-hub.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           node-version: 14
       - run: npm install -D esbuild
-      - run: npm run build        
+      - run: npm run build
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
       - name: Set up Docker Buildx
@@ -32,7 +32,7 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: bsignbkc/express-sample-project:staging
+          tags: thuanhust/cicd2024:staging
 
 
   pull-and-up:
